--- a/public/post.html
+++ b/public/post.html
@@ -6,7 +6,7 @@
   </head>
   <body>
       <form method="post" action="/posts">
-          <input type="text" name="message" value="message goes here">
+          <input type="text" name="message" placeholder="message goes here">
           <button>Post it!</button>
       </form>
   </body>
