--- a/public/feed.html
+++ b/public/feed.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="topnav">
+  <a href="/index.html">Home</a>
+  <a href="/feed.html">Read the feed</a>
+  <a href="/post.html">Post something</a>
+</div>
     <h1 class="title">Message Feed</h1>
     <div class="message-list">
     </div>
