--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="topnav">
+  <a href="/index.html">Home</a>
+  <a href="/feed.html">Read the feed</a>
+  <a href="/post.html">Post something</a>
+</div>
       <h1>This is index.html</h1>
       <h2>I hope you like it</h2>
       <p>This is a paragraph.</p>
-      <a href="feed.html">read the feed</a>
-      <a href="post.html">post something</a>
+
   </body>
 </html>
