ghost text when filling out the form

--- a/public/post.html
+++ b/public/post.html
@@ -13,7 +13,7 @@
 </div>
       <form method="post" action="/posts">
 
-          <input type="text" name="message" value="message goes here" class="messageInput">
+          <input type="text" name="message" placeholder="message goes here" class="messageInput">
 
 
             <button class="postButton">
