--- a/public/post.html
+++ b/public/post.html
@@ -13,6 +13,9 @@
 </div>
       <form method="post" action="/posts">
 
+          <br><br>
+          <input type="text" name="name" value="what is your name" class="nameInput">
+          <br><br>
           <input type="text" name="message" value="message goes here" class="messageInput">
 
 
@@ -26,6 +29,7 @@
       function myCoolFunction(e) {
     e.preventDefault();
     let data = {};
+    data.author = $(".nameInput").val();
     data.message = $(".messageInput").val();
     $(".note").text("Thanks! Your message was saved!");
 $.post( "/posts" , data );
