--- a/public/feed.html
+++ b/public/feed.html
@@ -30,6 +30,9 @@ function displayMessage(post) {
 
   let messageElement = $('<div class="message">' + post.message + '</div>');
   postElement.append(messageElement) + postElement.append(timeElement);
+
+  let idElement = $('<div class="postId">' + post.id + '</div>');
+  postElement.append(idElement);
 }
 
 function createFeed(posts) {
