--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
   </head>
   <body>
     <div class="topnav">
-  <a href="/index.html">Home</a>
-  <a href="/feed.html">Read the feed</a>
-  <a href="/post.html">Post something</a>
+      <a href="/index.html">Home</a>
+      <a href="/feed.html">My favourites</a>
+      <a href="/feed2.html">Read the feed</a>
+      <a href="/post.html">Post something</a>
 </div>
       <h1>This is index.html</h1>
       <h2>I hope you like it</h2>
