--- a/public/post.html
+++ b/public/post.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <div class="topnav">
-  <a href="/index.html">Home</a>
-  <a href="/feed.html">Read the feed</a>
-  <a href="/post.html">Post something</a>
+      <a href="/index.html">Home</a>
+      <a href="/feed.html">My favourites</a>
+      <a href="/feed2.html">Read the feed</a>
+      <a href="/post.html">Post something</a>
 </div>
 
 <h1> Write your post </h1>
