created filter in feed.html
search box filters

--- a/public/feed.html
+++ b/public/feed.html
@@ -15,6 +15,12 @@
   <a href="/post.html">Post something</a>
 </div>
     <h1 class="title">Message Feed</h1>
+
+    <form>
+      <input type="text" name="name" placeholder="Search favourites" class="filter">
+      <button class="postButton">Search</button>
+          </form>
+
     <div class="message-list">
     </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-dateFormat/1.0/jquery.dateFormat.js"></script>
@@ -48,7 +54,27 @@ function createFeed(posts) {
   posts.forEach(displayMessage);
 }
 
+
+
+function filterFeed(posts)
+{
+  let searchText = $(".filter").val()
+  $(".message-list").children().each(function(number, element)
+    {
+      //code in here will be run once for each post in the list
+      if (element.innerHTML.toLowerCase().includes(searchText.toLowerCase()))
+        {
+        $(element).removeClass("hidden");
+        } else
+        {
+        $(element).addClass("hidden");
+        };
+    });
+}
+
 $.get("/posts", createFeed);
+$(".filter").on("keyup", filterFeed);
+
 
 //This is the end of the JavaScript.
     </script>
