--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,20 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
   </head>
   <body>
+
+    <h1>Welcome to Blender</h1>
+    <h2>Swipe for food</h2>
+
     <div class="topnav">
       <a href="/index.html">Home</a>
       <a href="/feed.html">My favourites</a>
       <a href="/feed2.html">Read the feed</a>
       <a href="/post.html">Post something</a>
 </div>
-      <h1>This is index.html</h1>
-      <h2>I hope you like it</h2>
-      <p>This is a paragraph.</p>
+
 
   </body>
 </html>
