--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
 
+    <img class="logo" src="/images/Blender-logo.png"/>
     <h1>Welcome to Blender</h1>
     <h2>Swipe for food</h2>
 
@@ -17,7 +18,6 @@
       <a href="/feed2.html">Read the feed</a>
       <a href="/post.html">Post something</a>
 </div>
-
 
   </body>
 </html>
