--- a/public/feed2.html
+++ b/public/feed2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
   </head>
+  <img class="logo" src="/images/Blender-logo.png"/>
   <body>
     <div class="topnav">
       <a href="/index.html">Home</a>
