Add to Favourites
Adds "yes" posts to favourites page

--- a/public/feed.html
+++ b/public/feed.html
@@ -73,7 +73,7 @@ function filterFeed(posts)
     });
 }
 
-$.get("/posts", createFeed);
+$.get("/favourites", createFeed);
 $(".filter").on("keyup", filterFeed);
 
 
