--- a/public/delete.html
+++ b/public/delete.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="topnav">
+  <img class="logo" src="/images/Blender-logo.png"/>
   <a href="/index.html">Home</a>
   <a href="/feed.html">Read the feed</a>
   <a href="/post.html">Post something</a>
