--- a/public/feed.html
+++ b/public/feed.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <img class="logo" src="/images/Blender-logo.png"/>
+    <img class="logo" src="/Images/Blender-logo.png"/>
     <div class="topnav">
   <a href="/index.html">Home</a>
   <a href="/feed.html">My favourites</a>
