--- a/public/feed2.html
+++ b/public/feed2.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
   <script src="hammer.min.js"></script>
   </head>
-  <img class="logo" src="/images/Blender-logo.png"/>
+  <img class="logo" src="/Images/Blender-logo.png"/>
   <body>
     <div class="topnav">
       <a href="/index.html">Home</a>
