--- a/public/login.html
+++ b/public/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <img class="logo" src="/images/Blender-logo.png"/>
+    <img class="logo" src="/Images/Blender-logo.png"/>
     <div class="topnav">
   <a href="/index.html">Home</a>
   <a href="/feed.html">Read the feed</a>
