--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
   </head>
   <body>
-    
-    <img class="logo" src="/images/Blender-logo.png"/>
+
+    <img class="logo" src="/Images/Blender-logo.png"/>
     <h1>Welcome to Blender</h1>
     <h2>Swipe for food</h2>
 
