--- a/public/post.html
+++ b/public/post.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
   </head>
   <body>
-    <img class="logo" src="/images/Blender-logo.png"/>
+    <img class="logo" src="/Images/Blender-logo.png"/>
     <div class="topnav">
       <a href="/index.html">Home</a>
       <a href="/feed.html">My favourites</a>
